redis alet mock service